--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -4,16 +4,12 @@ serenity {
   logging = VERBOSE
 }
 
-headless.mode = true
+headless.mode = false
 webdriver {
-  driver = chrome
-  capabilities {
-    browserName = "chrome"
-    acceptInsecureCerts = true
-    "goog:chromeOptions" {
-      args = ["remote-allow-origins=*","test-type", "no-sandbox", "ignore-certificate-errors", "--window-size=1000,800",
-        "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
-    }
-  }
+  autodownload = true
+  driver = edge
+
 }
+chrome_preferences.profile_default_content_settings.popups=0
+chrome_preferences.pdfjs.disabled=true
 
