--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -7,7 +7,7 @@ serenity {
 headless.mode = false
 webdriver {
   autodownload = true
-  driver = edge
+  driver = chrome
 
 }
 chrome_preferences.profile_default_content_settings.popups=0
